# BoostResonanceDurationMod

./: README.md
BoostResonanceDurationMod/: CMakeLists.txt
BoostResonanceDurationMod/Scripts/: main.lua
BoostResonanceDurationMod/src/: VentruePassive.cpp  VentruePassive.hpp  dllmain.cpp
